docs/k8s/k8s-yaml/kubia/kubia-manal-with-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-gpu
  labels:
    creation_method: manual
    env: pord
spec:
  nodeSelector:
    gpu: "true"
  containers:
  - name: kubia
    image: huanghuanghui/kubia
    ports:
      - containerPort: 8080
        protocol: TCP
