docs/k8s/k8s-yaml/kubia/kubia-manual-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual-v2
  labels:
    creation_method: manual
    env: pord
spec:
  containers:
  - name: kubia
    image: huanghuanghui/kubia
    ports:
      - containerPort: 8080
        protocol: TCP
