docs/k8s/k8s-yaml/kubia/kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
    - image: huanghuanghui/kubia
      name: kubia
      livenessProbe:
        httpGet:
          path: /
          port: 8080
      ports:
        - containerPort: 8080
          protocol: TCP
