docs/k8s/k8s-yaml/kubia/deployment-test-v3.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-v4-test
spec:
  type: LoadBalancer
  selector:
    app: kubia-v4-test
  ports:
  - port: 80
    targetPort: 8080
