docs/k8s/k8s-yaml/kubia/kubia-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalance
spec:
  type: LoadBalancer
  selector:
    app: kubia
  ports:
  - port: 80
    targetPort: 8080
