docs/k8s/k8s-yaml/kubia/deployment-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubia
  labels:
    name: kubia
spec:
  rules:
  - host: kubia.example.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "kubia"
          servicePort: 80
